# quadrupeds_controllers

./: README.md
champ/champ_bringup/: package.xml
champ/champ_bringup/launch/: bringup.launch.py
champ/champ_config/: CMakeLists.txt
champ/champ_config/launch/: navigate.launch.py
champ/champ_description/: package.xml
champ/champ_description/launch/: description.launch.py
champ/champ_description/rviz/: urdf_viewer.rviz
champ/champ_description/urdf/: champ.urdf  champ.urdf.xacro
champ/champ_gazebo/: CMakeLists.txt  package.xml
champ/champ_gazebo/config/: ros_control.yaml
champ/champ_gazebo/launch/: champ_gazebo.launch.py
champ/champ_gazebo/params/: champ_gz_bridge.yaml
champ/champ_gazebo/src/: contact_sensor.cpp
champ/champ_gazebo/worlds/: default.world  maze.world
champ/champ_navigation/: CMakeLists.txt
champ/champ_navigation/launch/: navigate.launch.py  slam.launch.py
champ/champ_navigation/rviz/: navigation.rviz
forward_kinematic/: CMakeLists.txt  package.xml
