<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qc_forward_kinematic</name>
  <version>1.0.0</version>
  <description>...</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>python3</build_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>ros2_control</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>